syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message UpdateIsOfferDocumentArchivedRequest {
	int32 SalesArrangementId = 1;
	bool IsOfferDocumentArchived = 2;
}